# e-commerce

./: README.md
.github/workflows/: remote_deployment.yml
backend/: Cargo.toml  config.toml  mock_server.js  package-lock.json  package.json
backend-node/: brands.json  mock_server.js  mock_server_data_generator.js  products.json
backend-rust/: Cargo.toml  products.json
backend-rust/src/: api.rs  auth.rs  deserializer.rs  main.rs  model.rs
backend-rust/src/api/: cart_handlers.rs  item_handlers.rs  mod.rs  user_handlers.rs
backend/resources/: categories.json
backend/src/: main.rs
backend/src/api/: cart_handlers.rs  item_handlers.rs  mod.rs  user_handlers.rs
backend/src/model/: brand.rs  category.rs  cmp.rs  database.rs  filter.rs  mod.rs  order.rs  product.rs
frontend/: package-lock.json  package.json
frontend/src/: config.js  index.js
frontend/src/App/: App.js
frontend/src/CartComponents/: CartDetailsPage.js  CartItemsList.js
frontend/src/HomePage/: HomePage.js
frontend/src/ItemsComponents/: CategoryItem.js  CategoryPage.js  FilterComponent.js  ProductDetailsPage.js  ProductItem.js  ViewingProperties.js  index.js
frontend/src/LayoutComponents/: Loading.js  Navbar.js  NoResults.js  PrivateRoute.js  index.js
frontend/src/LoginPage/: LoginPage.js
frontend/src/NotFound/: NotFound.js
frontend/src/ProfileComponent/: OrdersPage.js  ProfilePage.js  index.js
frontend/src/RegisterPage/: RegisterPage.js
frontend/src/_actions/: alert.actions.js  index.js  (+3 more)
git_resources/: ecommerce_bck.sql  ecommerce_scheme.mwb
scripts/: build_and_run.sh
(+28 files in other folders)
