[package]
name = "backend-rust"
version = "0.1.0"
authors = ["grzes5003 <grzes.kulinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.1"
rustls = "0.19.0"
lazy_static = "^1.4.0"
