[package]
name = "backend-rust"
version = "0.1.0"
authors = ["grzes5003 <grzes.kulinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.1"
actix-http = "2.2.0"
actix-web-httpauth = "0.5.0"
actix-cors = "0.5.3"
actix-session = "0.4.0"

serde = "1.0.118"

fake = "2.2"
rand = "0.7"
